--- a/temas.css
+++ b/temas.css
@@ -2,42 +2,44 @@
     
     width: 100%;
     height: 1400px;
-    background-color: goldenrod;
+    background-color: rgb(0, 8, 255);
 }
 .encabezado{
 
     width: 100%;
     height: 150px;
-    background-color: rgb(231, 231, 84);
+    background-color: rgb(47, 80, 211);
+    font-size: 30px;
+    text-align: center;
 }
 .menu{
 
     width: 100%;
     height: 100px;
-    background-color: rgb(200, 200, 57);
+    background-color: rgb(103, 113, 255);
 }
 .contenedor2{
 
     width: 100%;
     height: 1200px;
-    background-color: rgb(245, 245, 33);
+    background-color: rgb(84, 108, 201);
     display: flex;
 }
 .izquierdo{
 
     width: 20%;
     height: 1200px;
-    background-color: peru;
+    background-color: rgb(130, 149, 255);
 }
 .centro{
 
     width: 60%;
     height: 1200px;
-    background-color: white;
+    background-color: rgb(193, 192, 228);
 }
 .derecho{
 
     width: 20%;
     height: 1200px;
-    background-color: peru;
+    background-color: rgb(130, 151, 255);
 }
